Format titles, change font to Minion

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -4,7 +4,7 @@
 \usepackage[all]{nowidow}
 \usepackage{setspace,url,indentfirst,hyphenat,xeCJK,makeidx,sectsty,fancyhdr,csquotes,emptypage}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
-\setmainfont[Mapping=times]{Adobe Garamond Pro}
+\setmainfont[Mapping=times]{Minion Pro}
 \setsansfont[Scale=0.88]{Myriad Pro}
 \setCJKmainfont[Scale=0.89]{Source Han Serif TC}
 \setCJKsansfont{Source Han Sans TW}
@@ -29,3 +29,7 @@
 \author{Karol Moroz 莫若思}
 \title{A Comparative Analysis of the Esperanto and Chinese Translations of \textit{Marta} by Eliza Orzeszkowa}
 \newcommand{\titlezh}{奥西斯歌《孤雁淚》的波蘭文原文版及其世界語、中文譯本的比較}
+
+\titleformat{\chapter}[hang]
+{\normalfont\huge}{{\thechapter}}{10pt}{}
+\titlespacing{\chapter}{0pt}{0.5em}{0.5em}
