--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 \input{_preamble}
 \begin{document}
 \input{titlepage}
-\chapter{Introduction}
+\include{introduction}
+
+\include{references}
 
 \end{document}
