Add some introduction about Eliza

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -1,10 +1,12 @@
+\usepackage[english]{babel}
 \usepackage[no-math]{fontspec}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage[compact]{titlesec}
 \usepackage[all]{nowidow}
-\usepackage{setspace,url,indentfirst,hyphenat,xeCJK,makeidx,sectsty,fancyhdr,csquotes,emptypage}
+\usepackage{setspace,url,indentfirst,hyphenat,xeCJK,makeidx,sectsty,fancyhdr,emptypage}
+\usepackage{csquotes}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
-\setmainfont[Mapping=times]{Minion Pro}
+\setmainfont[Mapping=tex-text]{Minion Pro}
 \setsansfont[Scale=0.88]{Myriad Pro}
 \setCJKmainfont[Scale=0.89]{Source Han Serif TC}
 \setCJKsansfont{Source Han Sans TW}
