--- a/introduction.tex
+++ b/introduction.tex
@@ -2,4 +2,30 @@
 \chapter{Introduction}
 
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and Traditional Chinese.
-Eliza Orzeszkowa (known in Chinese literature under either the transcribed name 艾麗查・奧熱什科娃 \nazwisko{Àilìchá Àorèshíkēwā}, also written 艾麗查·奧若什科娃 \nazwisko{Àilìchá Àoruòshíkēwā} or the abbreviated variant 奥西斯歌 \nazwisko{Àoxīsīgē}) was 
+Eliza Orzeszkowa 
+
+The Chinese version was translated from the Esperanto translation in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) and first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}).
+(Orzeszko 1948).
+
+All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words is set in italic type, while proper names are set in regular font.
+
+\section{The life and times of Eliza Orzeszkowa}
+
+In order to fully understand the works of Eliza Orzeszkowa, it is important to put her writings in their historical context.
+Poland did not exist as a sovereign state after 1795, when the remaining territory of the Polish-Lithuanian Commonwealth was annexed by the Russian Empire, the  Kingdom of Prussia, and the Austro-Hungarian Empire.
+After the partitions, the ruling forces exercised policies aiming to uproot all expressions of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
+For 123 years between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
+It was particularly important in the works of the Positivist writers, 
+
+Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
+At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament.
+In 1858, at the age of 17, she married Piotr Orzeszko, a landowner. In many Slavic languages, including Polish, family names take a different form when referring to a man, his daughter, and his wife, the form ``Orzeszkowa'' meaning `Mrs. Orzeszko'.
+At the ti
+The marriage of Mr. and Mrs. Orzeszko proved unsuccesful, mainly due to the Eliza's passionate interest for the Polish 
+(Britannica, Bachórz).
+
+\section{Names of Eliza Orzeszkowa}
+% 孀婦 shuang1fu4
+In Chinese-language literature, Eliza Orzeszkowa is referred to by many slightly different names.
+In 
+(known in Chinese literature under either the transcribed name 艾麗查・奧熱什科娃 \nazwisko{Àilìchá Àorèshíkēwā}, also written 艾麗查·奧若什科娃 \nazwisko{Àilìchá Àoruòshíkēwā} or the abbreviated variant 奥西斯歌 \nazwisko{Àoxīsīgē}) was 
