--- a/references.tex
+++ b/references.tex
@@ -2,10 +2,18 @@
 \addcontentsline{toc}{chapter}{References}
 \markboth{References}{References}
 
-Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
+Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Retrieved March 7th, 2020, from \url{https://literat.ug.edu.pl/autors/orzeszk.htm}.
 
-Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/book/pdf/orzeszkowa-marta.pdf}.
+Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf} on March 7th, 2020.
 
-Orzeszkowa E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html}.
+\textit{Eliza Orzeszkowa}. Encyclopedia Britannica.
 
-Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803
+Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
+
+Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
+
+Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/book/pdf/orzeszkowa-marta.pdf} on March 7th, 2020.
+
+Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
+
+Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved on March 7th, 2020.
