Add more information about Eliza

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -15,7 +15,7 @@
 \newcommand{\toponim}[1]{\nohyphens{\pyfont #1}}
 \newcommand{\nazwisko}[1]{\nohyphens{\pyfont #1}}
 \newcommand{\pinyin}[1]{\nohyphens{\pyfont\itshape #1}}
-\newcommand{\defspacing}{\spacing{1.32}}
+\newcommand{\defspacing}{\spacing{1.65}}
 \newcommand{\quotespacing}{\spacing{1.1}}
 \let\fnm=\footnotemark
 \pagestyle{fancy}
@@ -35,3 +35,5 @@
 \titleformat{\chapter}[hang]
 {\normalfont\huge}{{\thechapter}}{10pt}{}
 \titlespacing{\chapter}{0pt}{0.5em}{0.5em}
+
+\hyphenation{Mil-kow-szczy-zna}
