--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,5 @@
-\spacing{1.32}
 \chapter{Introduction}
+\defspacing
 
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and Traditional Chinese.
 Eliza Orzeszkowa 
@@ -19,13 +19,24 @@ It was particularly important in the works of the Positivist writers,
 
 Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
 At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament.
-In 1858, at the age of 17, she married Piotr Orzeszko, a landowner. In many Slavic languages, including Polish, family names take a different form when referring to a man, his daughter, and his wife, the form ``Orzeszkowa'' meaning `Mrs. Orzeszko'.
-At the ti
+In 1858, at the age of 17, she married Piotr Orzeszko, a landowner.
 The marriage of Mr. and Mrs. Orzeszko proved unsuccesful, mainly due to the Eliza's passionate interest for the Polish 
 (Britannica, Bachórz).
 
 \section{Names of Eliza Orzeszkowa}
 % 孀婦 shuang1fu4
-In Chinese-language literature, Eliza Orzeszkowa is referred to by many slightly different names.
-In 
-(known in Chinese literature under either the transcribed name 艾麗查・奧熱什科娃 \nazwisko{Àilìchá Àorèshíkēwā}, also written 艾麗查·奧若什科娃 \nazwisko{Àilìchá Àoruòshíkēwā} or the abbreviated variant 奥西斯歌 \nazwisko{Àoxīsīgē}) was 
+In many Slavic languages, including Polish, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
+For instance, the wife of another well-known writer, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
+Analogously, in case of the name ``Eliza Orzeszkowa,'' Orzeszkowa means `the wife of Mr. Orzeszko,' which roughly corresponds to the English form ``Mrs. Piotr Orzeszko.''
+In modern-day Polish, however, this convention is virtually obsolete.
+All family members use the same form of the name, and the wife of Mr. Orzeszko can be called Mrs. Orzeszko.
+A notable exception to this rule are the surnames ending in \textit{-ski} or similar suffixes, such as Kowalski, Górecki, Grodzki.
+These surnames have evolved from adjectives and still follow all the grammar rules pertaining to adjectives.
+Thus, the wife and daughter of the Polish counterpart of John Smith, Jan Kowalski, would still use the form \textit{Kowalska}. 
+
+In Chinese-language literature, Eliza Orzeszkowa is referred to by her Polish name, with several, slightly different, renditions into Chinese characters.
+In Zhong Xianmin's translation, her name is transcribed into Chinese as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}), a rather badly corrupted rendition of ``Eliza Orzeszko.''
+This rendition of the name may be due to the fact that Zamenhof used the neutral form of her surname to sign his translation into Esperanto.
+On Chinese-language websites, other names are used, based on the more traditional form ``Mrs. Orzeszkowa.'' These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the prevalent form in Polish-language writings.
+
+\section{The Esperanto movement}
