--- a/titlepage.tex
+++ b/titlepage.tex
@@ -19,7 +19,7 @@
     \vspace{2cm plus 1.5fill}
     {\large 指導老師：某某某博士}\par
     \vspace{0.5em}
-    {\large Advisor: Dr. 某某某}\par
+    {\large Advisor: Dr. John Doe}\par
     \vspace{2cm}
     {\large 中華民國一〇九年三月}\par
     \vspace{0.5em}
