Add info about Esperanto

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -30,7 +30,7 @@
 
 \author{Karol Moroz 莫若思}
 \title{A Comparative Analysis of the Esperanto and Chinese Translations of \textit{Marta} by Eliza Orzeszkowa}
-\newcommand{\titlezh}{奥西斯歌《孤雁淚》的波蘭文原文版及其世界語、中文譯本的比較}
+\def\titlezh{愛麗查・奥西斯歌《孤雁淚》的波蘭文\\原文版及其世界語、中文譯本的比較}
 
 \titleformat{\chapter}[hang]
 {\normalfont\huge}{{\thechapter}}{10pt}{}
