--- a/introduction.tex
+++ b/introduction.tex
@@ -7,26 +7,27 @@ Eliza Orzeszkowa
 The Chinese version was translated from the Esperanto translation in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) and first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}).
 (Orzeszko 1948).
 
-All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words is set in italic type, while proper names are set in regular font.
+All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words are set in italic type, while proper names are set in regular font.
 
 \section{The life and times of Eliza Orzeszkowa}
 
 In order to fully understand the works of Eliza Orzeszkowa, it is important to put her writings in their historical context.
 Poland did not exist as a sovereign state after 1795, when the remaining territory of the Polish-Lithuanian Commonwealth was annexed by the Russian Empire, the  Kingdom of Prussia, and the Austro-Hungarian Empire.
-After the partitions, the ruling forces exercised policies aiming to uproot all expressions of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
-For 123 years between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
+After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
+For 123 years, between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
 It was particularly important in the works of the Positivist writers, 
+
+Gloger (2007) states that in the case of Poland, Positivism played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
 
 Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
 At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament.
 In 1858, at the age of 17, she married Piotr Orzeszko, a landowner.
-The marriage of Mr. and Mrs. Orzeszko proved unsuccesful, mainly due to the Eliza's passionate interest for the Polish 
-(Britannica, Bachórz).
+The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests---Eliza was highly pro-independence and sought the independence of serfs (Britannica, Bachórz).
 
 \section{Names of Eliza Orzeszkowa}
 % 孀婦 shuang1fu4
 In many Slavic languages, including Polish, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
-For instance, the wife of another well-known writer, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
+For instance, the wife of the well-known Polish poet of the Romanticist period, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
 Analogously, in case of the name ``Eliza Orzeszkowa,'' Orzeszkowa means `the wife of Mr. Orzeszko,' which roughly corresponds to the English form ``Mrs. Piotr Orzeszko.''
 In modern-day Polish, however, this convention is virtually obsolete.
 All family members use the same form of the name, and the wife of Mr. Orzeszko can be called Mrs. Orzeszko.
@@ -40,3 +41,10 @@ This rendition of the name may be due to the fact that Zamenhof used the neutral
 On Chinese-language websites, other names are used, based on the more traditional form ``Mrs. Orzeszkowa.'' These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the prevalent form in Polish-language writings.
 
 \section{The Esperanto movement}
+
+Esperanto is a constructed language created by Ludwik Lejzer Zamenhof (Esperanto: Ludoviko Lazaro Zamenhof, 1859-1917), a Jewish ophthalmologist from the city of Białystok, Congress Poland (present-day Białystok, Poland).
+The language first appeared in a book published in 1887 in Warsaw, in the Russian language, called \textit{The International Language} (Pre-reform Russian: Международный Языкъ, Modern Russian: Международный Язык \textit{Mezhdunarodnyi Yazyk}).
+The book contained a basic course of Zamenhof's constructed language together with a dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
+
+In the book, Zamenhof postulated the need for an international bridge language that could connect people from different cultural and language backgrounds.
+Similar endeavors had been undertaken before, with the most prominent example being Volapük, invented by a Catholic priest from Germany by the name Johann Martin Schleyer. 
