--- a/references.tex
+++ b/references.tex
@@ -6,7 +6,9 @@ Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Ret
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf} on March 7th, 2020.
 
-\textit{Eliza Orzeszkowa}. Encyclopedia Britannica.
+\textit{Eliza Orzeszkowa}. Encyclopedia Britannica. Retrieved March 7th, 2020, from \url{https://www.britannica.com/biography/Eliza-Orzeszkowa}.
+
+Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [Positivism: Between Modernity and Modernism]. \textit{Pamiętnik Literacki. Czasopismo kwartalne poświęcone historii i krytyce literatury polskiej}, 2007(1). Retrieved March 7th, 2020, from \url{https://www.ceeol.com/search/article-detail?id=200994}.
 
 Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
 
