--- a/titlepage.tex
+++ b/titlepage.tex
@@ -13,7 +13,7 @@
   \end{flushleft}%
   \vspace{8mm plus 1mm minus 2mm}
   \begin{center}%
-    {\Large\textbf{\titlezh}}\par
+    {\Large\textbf{\titlezh}\par}\par
     \vspace{1em}
     {\huge\textbf{\@title}\par}
     \vspace{2cm plus 1.5fill}
