--- a/introduction.tex
+++ b/introduction.tex
@@ -35,10 +35,10 @@ A notable exception to this rule are the surnames ending in \textit{-ski} or sim
 These surnames have evolved from adjectives and still follow all the grammar rules pertaining to adjectives.
 Thus, the wife and daughter of the Polish counterpart of John Smith, Jan Kowalski, would still use the form \textit{Kowalska}. 
 
-In Chinese-language literature, Eliza Orzeszkowa is referred to by her Polish name, with several, slightly different, renditions into Chinese characters.
-In Zhong Xianmin's translation, her name is transcribed into Chinese as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}), a rather badly corrupted rendition of ``Eliza Orzeszko.''
-This rendition of the name may be due to the fact that Zamenhof used the neutral form of her surname to sign his translation into Esperanto.
-On Chinese-language websites, other names are used, based on the more traditional form ``Mrs. Orzeszkowa.'' These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the prevalent form in Polish-language writings.
+In Zamenhof's translation of \textit{Marta}, the author's name is listed as Eliza Orzeszko.
+Zhong Xianmin's translation follows this convention, rendering the name into Chinese with slightly distorted pronunciation as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}).
+Other Chinese-language writings and websites use other variations, based on the traditional form ``Eliza Orzeszkowa.''
+These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the prevalent form in Polish-language writings.
 
 \section{The Esperanto movement}
 
@@ -47,4 +47,5 @@ The language first appeared in a book published in 1887 in Warsaw, in the Russia
 The book contained a basic course of Zamenhof's constructed language together with a dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 
 In the book, Zamenhof postulated the need for an international bridge language that could connect people from different cultural and language backgrounds.
-Similar endeavors had been undertaken before, with the most prominent example being Volapük, invented by a Catholic priest from Germany by the name Johann Martin Schleyer. 
+Similar endeavors had been undertaken before, with the most prominent example being Volapük, invented by a Catholic priest from Germany by the name Johann Martin Schleyer.
+(Zamenhof 2006).
