--- a/references.tex
+++ b/references.tex
@@ -4,7 +4,7 @@
 
 Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Retrieved March 7th, 2020, from \url{https://literat.ug.edu.pl/autors/orzeszk.htm}.
 
-Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf} on March 7th, 2020.
+Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
 \textit{Eliza Orzeszkowa}. Encyclopedia Britannica. Retrieved March 7th, 2020, from \url{https://www.britannica.com/biography/Eliza-Orzeszkowa}.
 
@@ -19,3 +19,5 @@ Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/
 Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
 
 Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved on March 7th, 2020.
+
+Zamenhof L. L. (2006). \textit{Dr. Esperanto's International Language}. Geoghegan, R. H. (Trans.). Berwick, Nova Scotia, Canada. Retrieved March 9th, 2020, from \url{https://en.wikisource.org/wiki/Dr._Esperanto\%27s_International_Language}.
