Add more info on Esperanto, TOC

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -42,4 +42,4 @@
 {\normalfont\huge}{{\thechapter}}{10pt}{}
 \titlespacing{\chapter}{0pt}{0.5em}{0.5em}
 
-\hyphenation{Mil-kow-szczy-zna Biały-stok}
+\hyphenation{Mil-kow-szczy-zna Biały-stok Меж-ду-на-род-ный}
