--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,9 @@ Eliza Orzeszkowa
 The Chinese version was translated from the Esperanto translation in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) and first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}).
 (Orzeszko 1948).
 
-All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words are set in italic type, while proper names are set in regular font.
+\section{A note on transcriptions and transliterations}
+
+All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words are set in italic type, while proper names are set in regular font. Russian terms are rendered in original Cyryllic script together with their transliteration according to the BGN/PCGN romanization system for Russian.
 
 \section{The life and times of Eliza Orzeszkowa}
 
@@ -38,14 +40,42 @@ Thus, the wife and daughter of the Polish counterpart of John Smith, Jan Kowalsk
 In Zamenhof's translation of \textit{Marta}, the author's name is listed as Eliza Orzeszko.
 Zhong Xianmin's translation follows this convention, rendering the name into Chinese with slightly distorted pronunciation as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}).
 Other Chinese-language writings and websites use other variations, based on the traditional form ``Eliza Orzeszkowa.''
-These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the prevalent form in Polish-language writings.
+These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the most prevalent form in Polish-language writings.
 
 \section{The Esperanto movement}
 
-Esperanto is a constructed language created by Ludwik Lejzer Zamenhof (Esperanto: Ludoviko Lazaro Zamenhof, 1859-1917), a Jewish ophthalmologist from the city of Białystok, Congress Poland (present-day Białystok, Poland).
-The language first appeared in a book published in 1887 in Warsaw, in the Russian language, called \textit{The International Language} (Pre-reform Russian: Международный Языкъ, Modern Russian: Международный Язык \textit{Mezhdunarodnyi Yazyk}).
-The book contained a basic course of Zamenhof's constructed language together with a dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
+Esperanto (Chinese: 世界語 \pinyin{Shìjièyǔ}, lit. `world language') is a constructed language created by Ludwik Lejzer Zamenhof (Esperanto: Ludoviko Lazaro Zamenhof, 1859-1917), a Jewish ophthalmologist.
+Zamenhof was born in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland), an ethnically and linguistically diverse city inhabited by Poles, Russians, Germans, and Jews.
+% Each and all of these nations spoke their own language and despised the others for spea
+Having been raised as an idealist, in the belief that all men were brothers, he had noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
+Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904).
 
-In the book, Zamenhof postulated the need for an international bridge language that could connect people from different cultural and language backgrounds.
-Similar endeavors had been undertaken before, with the most prominent example being Volapük, invented by a Catholic priest from Germany by the name Johann Martin Schleyer.
-(Zamenhof 2006).
+The language he authored was first described in the Russian language, in a book published in 1887 in Warsaw, called in the English edition \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar} (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ. \textit{Mezhdunarodnyi Yazyk. Predislovie i polnyi uchebnik.} `The International Language. Introduction and Complete Textbook').
+The book contained a basic course of Zamenhof's constructed language together with a dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
+At the time, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
+Esperanto
+
+In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
+He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language (Zamenhof 2006).
+
+Similar endeavors had been undertaken before, with the most prominent example being Volapük, designed by a Catholic priest from Germany by the name Johann Martin Schleyer, however none of them had gained any significant international attention, nor had succeeded in becoming a generally accepted \textit{lingua franca}.
+Their failure, Zamenhof argued, had been due to their failure to meet three crucial conditions:
+% For a constructed language to become successful, Zamenhof suggested three key conditions that ought to be met. These conditions were:
+
+\begin{enumerate}
+  \item that the language be easy to learn, so as to make its acquisition a ``mere play to the learner,''
+  \item designating the language as a means of international communication rather than a ``universal'' language, and enabling the learner to make direct use of his knowledge of the language with persons of any nationality,
+  \item convincing indifferent people around the world to learn the proposed international language (Zamenhof 2006).
+\end{enumerate}
+
+Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
+It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
+On the other hand, it is by far the most successful constructed language in history, with the estimated number of speakers ranging from 100,000 to 2 million, depending on the source.
+Esperanto is actively spoken not only by L2 speakers, but quite often also by their bilingual or multilingual offspring.
+In Esperanto, native speakers of Esperanto are referred to as \textit{denaskuloj} (from \textit{denask-} `from birth' and \textit{ulo} `person, individual') or \textit{denaskaj Esperantistoj} (`Esperantist from birth')
+(Britannica 2019a).
+
+Arika Okrent, the author of a book on the topic of constructed languages, is generally critical of most of these projects.
+Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease of communication that the speakers of Esperanto managed to attain:
+
+\longquote{At the Esperanto conference I attended, more than I expected. I thought it would be a lot of play acting, like [in a singsong voice], “Hello. How are you? I am fine.” But they were speaking fluently, and with a little bit of study I could understand what was going on. There was also a lot of Victorian rigmarole because Esperanto was a turn of the [20th] century phenomenon they have retained all these old rituals. They have a flag passing ceremony and the reading of greetings from various Esperanto clubs—even a show and piano recitals.}
