--- a/references.tex
+++ b/references.tex
@@ -6,11 +6,15 @@ Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Ret
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
-\textit{Eliza Orzeszkowa}. Encyclopedia Britannica. Retrieved March 7th, 2020, from \url{https://www.britannica.com/biography/Eliza-Orzeszkowa}.
+The Editors of Encyclopaedia Britannica. (2019). \textit{Esperanto}. In \textit{Encyclopædia Britannica}. Retrieved March 9th, 2020, from \url{https://www.britannica.com/topic/Esperanto}.
+
+The Editors of Encyclopaedia Britannica. (2019). \textit{Eliza Orzeszkowa}. In \textit{Encyclopædia Britannica}. Retrieved March 7th, 2020, from \url{https://www.britannica.com/biography/Eliza-Orzeszkowa}.
 
 Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [Positivism: Between Modernity and Modernism]. \textit{Pamiętnik Literacki. Czasopismo kwartalne poświęcone historii i krytyce literatury polskiej}, 2007(1). Retrieved March 7th, 2020, from \url{https://www.ceeol.com/search/article-detail?id=200994}.
 
 Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
+
+Okrent A. (2009, July 21). \textit{Discouraging Words: Invented languages and their long history of failure.} Interview with Jason Zasky. Retrieved March 9th, 2020, from \url{http://failuremag.com/article/discouraging-words}.
 
 Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
 
@@ -19,5 +23,7 @@ Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/
 Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
 
 Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved on March 7th, 2020.
+
+Zamenhof L. L. (1904). \textit{The Birth of Esperanto}. Ellis J. (Trans.). Private letter with unknown recipient.
 
 Zamenhof L. L. (2006). \textit{Dr. Esperanto's International Language}. Geoghegan, R. H. (Trans.). Berwick, Nova Scotia, Canada. Retrieved March 9th, 2020, from \url{https://en.wikisource.org/wiki/Dr._Esperanto\%27s_International_Language}.
