Add some notes and update intro

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,11 +1,11 @@
 \chapter{Introduction}
 \defspacing
 
-The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and Traditional Chinese.
-Eliza Orzeszkowa 
-
-The Chinese version was translated from the Esperanto translation in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) and first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}).
-(Orzeszko 1948).
+The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Traditional Chinese.
+The novel was first published in Polish in 1873, in Esperanto in 1810, and in Traditional Chinese in 1948.
+The Chinese version was translated in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) from the Esperanto edition.
+His translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
+(Kökény and Bleier 1933: 612; Orzeszko 1948).
 
 \section{A note on transcriptions and transliterations}
 
@@ -17,7 +17,7 @@ In order to fully understand the works of Eliza Orzeszkowa, it is important to p
 Poland did not exist as a sovereign state after 1795, when the remaining territory of the Polish-Lithuanian Commonwealth was annexed by the Russian Empire, the  Kingdom of Prussia, and the Austro-Hungarian Empire.
 After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
 For 123 years, between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
-It was particularly important in the works of the Positivist writers, 
+It was particularly important in the works of Positivist writers, 
 
 Gloger (2007) states that in the case of Poland, Positivism played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
 
@@ -79,3 +79,10 @@ Arika Okrent, the author of a book on the topic of constructed languages, is gen
 Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease of communication that the speakers of Esperanto managed to attain:
 
 \longquote{At the Esperanto conference I attended, more than I expected. I thought it would be a lot of play acting, like [in a singsong voice], “Hello. How are you? I am fine.” But they were speaking fluently, and with a little bit of study I could understand what was going on. There was also a lot of Victorian rigmarole because Esperanto was a turn of the [20th] century phenomenon they have retained all these old rituals. They have a flag passing ceremony and the reading of greetings from various Esperanto clubs—even a show and piano recitals.}
+
+\section{The content of the novel}
+\textit{Marta} tells the story of Marta {nazwisko}.
+In the beginning of the narrative, Marta is presented as a relatively affluent lady whose husband had just died, leaving her with a little daughter. % has?
+Due to these unfavorable circumstances, she is compelled to move out of the lavish apartment in Warsaw that she and her family had inhabited.
+
+The novel \textit{Marta} is divided into nine unnumbered chapters and an introduction. 
